--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,35 @@
-Hello world
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Forms & Tabs</title>
+		
+		<link rel="stylesheet" href="./css/main.css"/>
+		
+		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+		
+		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.5.0.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-animate.min.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-sanitize.js"></script>
+		
+		<script src="./js/app.js"></script>
+		<script src="./js/MainController.js"></script>
+		<script src="./js/components.js"></script>
+	</head>
+	<body ng-app="formsAndTabs">
+		<div class="header">
+			<h1>Forms & tabs</h1>
+			A webapp with some forms and with some tabs
+		</div>
+		<div id="forms-container" class="container-fluid">
+			<div class="row-fluid">
+				<div class="col-sm-3"></div>
+				<div class="col-sm-6">
+					<main-table></main-table>
+				</div>
+				<div class="col-sm-2"></div>
+			</div>
+		</div>
+	</body>
+</html>
