--- a/public/html/componentsTemplates/secondForm.html
+++ b/public/html/componentsTemplates/secondForm.html
@@ -1,4 +1,4 @@
-<div class="table-responsive">
+<div class="table-responsive" ng-show="$ctrl.ngShow">
 	<table class="table table-hover">
 		<thead>
 			<tr>
